fix(scroll-detector): remove viewport overflow issue

--- a/components/infinite-scroll-detector/index.module.css
+++ b/components/infinite-scroll-detector/index.module.css
@@ -1,9 +1,9 @@
 .container {
     position: relative;
+    width: 100%;
 }
 
 .detector {
-    width: 100vw;
     height: 50vh;
     position: absolute;
     bottom: 0;
